--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/brunosm16/api-node-tdd#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
     "@types/validator": "^13.7.0",
@@ -40,6 +41,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "validator": "^13.7.0"
   }
 }
