--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/brunosm16/api-node-tdd#readme",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^2.1.1",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.0.3",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^16.11.10",
     "@types/validator": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -42,6 +44,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "mongodb": "^4.2.1",
     "validator": "^13.7.0"
   }
 }
