--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -24,9 +25,11 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.2",
     "@types/jest": "^27.0.3",
     "@types/mongodb": "^3.3.14",
     "@types/node": "^16.11.10",
+    "@types/supertest": "^2.0.8",
     "@types/validator": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "eslint": "^7.32.0",
@@ -38,12 +41,15 @@
     "husky": "^4.3.8",
     "jest": "^27.3.1",
     "lint-staged": "^12.1.2",
+    "sucrase": "^3.12.1",
+    "supertest": "^4.0.2",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
     "mongodb": "^3.5.1",
     "validator": "^13.7.0"
   }
